[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
typer = {extras = ["all"], version = "^0.12.3"}
scipy = "^1.13.0"
torch = "^2.2.2"
gymnasium = {version = "1.0.0a1", extras = ["mujoco"]}
pettingzoo = {extras = ["sisl"], version = "^1.24.3"}
jupyterlab = "^4.1.6"
jupytext = "^1.16.1"
lbforaging = "^1.1.1"
rware = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"